--- a/src/assets/Styles/fonts.scss
+++ b/src/assets/Styles/fonts.scss
@@ -31,3 +31,7 @@
     font-family: 'Montserrat-Regular';
     src: url('@/assets/fonts/Montserrat-Regular.ttf');
 }
+@font-face {
+    font-family: 'BillabongCyr';
+    src: url('@/assets/fonts/BillabongCyr.ttf');
+}
