--- a/src/components/Pages/aboutpages.scss
+++ b/src/components/Pages/aboutpages.scss
@@ -27,12 +27,20 @@
                         font-size: 42px;
                         margin: 0 auto;
                       }
+                      @media screen and (max-width:480px) {
+                        font-size: 22px;
+                        margin: 0 auto;
+                      }
                 }
                 &-subtitle{
                     font-size: 32px;
                     color:white;
                     margin:30px 0px;
                     line-height: 60px;
+                    @media screen and (max-width:480px) {
+                        font-size: 22px;
+                        margin: 0 auto;
+                      }
                 }
             }      
         }
