--- a/src/components/Pages/homepages.scss
+++ b/src/components/Pages/homepages.scss
@@ -58,7 +58,7 @@
                     max-width: 400px;
                     font-size: 52px;
                     text-align: center;
-                    color: rgb(238, 236, 236);
+                    color: rgb(183, 182, 182);
                     margin: 30px 0px;
                     font-family: 'Unbounded-Regular';
 
@@ -70,6 +70,11 @@
 
                     @media screen and (max-width:768px) {
                         font-size: 42px;
+                        margin: 0 auto;
+                        margin-top: 25px;
+                    }
+                    @media screen and (max-width:480px) {
+                        font-size: 28px;
                         margin: 0 auto;
                         margin-top: 25px;
                     }
@@ -85,12 +90,18 @@
                         margin: 0 auto;
                         text-align: center;
                     }
+                    @media screen and (max-width:480px) {
+                        font-size: 28px;
+                    }
                 }
 
                 &-text-1 {
                     font-size: 28px;
                     color: rgb(45, 231, 188);
                     font-family: 'Roboto-Regular';
+                    @media screen and (max-width:480px) {
+                        font-size: 24px;
+                    }
                 }
 
                 &-text-2 {
@@ -103,9 +114,33 @@
                         margin: 0 auto;
                         text-align: center;
                     }
+                    
+                    @media screen and (max-width:480px) {
+                        font-size: 24px;
+                    }
+                
                 }
             }
         }
+        .linear-con-1{
+            position: absolute;
+            width: 100%;
+            padding: 0px 60px;
+            &-line{
+                 width: 100%;
+                height: 4px;
+                opacity: 60%;
+                background: linear-gradient(90deg, #e7e3e2, #00594d, #23a6d5, #23d5ab);
+                background-size: 400% 400%;
+                animation: gradient 5s ease infinite;
+                transform: translate3d(0, 0, 0);
+                box-shadow: 0px 0px 5px 5px #00594d;
+                
+                border-radius: 50%;
+            }
+      
+        }
+
 
         &-section-2 {
             width: 100%;
@@ -133,6 +168,7 @@
 
                 &-text {
                     color: white;
+                 
                 }
             }
 
@@ -147,17 +183,44 @@
                 align-items: center;
 
                 &-title {
+                    background-image: url(https://static.tildacdn.com/tild3336-3066-4337-a438-393733646632/menu_1.gif);
+                    background-size:25%;
+                    color: rgba(104, 104, 104, 0.2);
+                    -moz-background-clip: text;
+                    -webkit-background-clip: text;
                     font-size: 32px;
                     font-family: 'Roboto-Regular';
-                    color: #cdd0d0;
-
+                    font-weight: bold;
+                    line-height: 50px;
+                    margin-top: -25px;
+                    letter-spacing: 1px;
+                    line-height:2;
+                    filter: drop-shadow(2px 2px 5px #ffffff);
                     @media screen and (max-width:480px) {
                         display: flex;
                         flex-direction: column;
                         text-align: center;
                     }
-                }
-
+                  }
+                  
+                  .white-mode {
+                    text-decoration: none;
+                    padding: 7px 10px;
+                    background-color: #122;
+                    border-radius: 3px;
+                    color: #FFF;
+                    transition: 511s ease-in-out;
+                    position: absolute;
+                    left: 15px;
+                    bottom: 15px;
+                    font-family: "Montserrat";
+                  }
+                  
+                  .white-mode:hover {
+                    background-color: #FFF;
+                    color: #122;
+                  }
+                  
                 &-text {
                     display: flex;
                     gap: 20px;
@@ -297,7 +360,6 @@
                         width: 300px;
                         height: 6px;
                         display: block;
-
                         margin-top: 10px;
                         background: linear-gradient(to left, rgb(102, 104, 104) 20%, rgb(0, 180, 168) 20%);
                         border-radius: 4px;
@@ -307,7 +369,6 @@
                         width: 300px;
                         height: 6px;
                         display: block;
-
                         margin-top: 10px;
                         background: linear-gradient(to left, rgb(102, 104, 104) 5%, rgb(0, 180, 168) 5%);
                         border-radius: 4px;
@@ -317,7 +378,6 @@
                         width: 300px;
                         height: 6px;
                         display: block;
-
                         margin-top: 10px;
                         background: linear-gradient(to left, rgb(102, 104, 104) 25%, rgb(0, 180, 168) 25%);
                         border-radius: 4px;
@@ -327,9 +387,16 @@
                         width: 300px;
                         height: 6px;
                         display: block;
-
                         margin-top: 10px;
                         background: linear-gradient(to left, rgb(102, 104, 104) 10%, rgb(0, 180, 168) 10%);
+                        border-radius: 4px;
+                    }
+                    .sp-5 {
+                        width: 300px;
+                        height: 6px;
+                        display: block;
+                        margin-top: 10px;
+                        background: linear-gradient(to left, rgb(102, 104, 104) 50%, rgb(0, 180, 168) 50%);
                         border-radius: 4px;
                     }
                 }
