--- a/src/components/Pages/myprojectpages.scss
+++ b/src/components/Pages/myprojectpages.scss
@@ -10,7 +10,9 @@
             text-align: center;
             font-size: 30px;
             font-family: 'Montserrat-Regular';
+            
          }
+         
         @media screen and (max-width:480px) {
             padding:10px;
         }
@@ -25,7 +27,6 @@
              }
             &-card{
                max-width: 450px;
-         
                &-movie{
                 width: 100%;
                border-radius: 12px;
@@ -34,9 +35,41 @@
                &-title{
                 color:white;
                 text-align: center;
-                margin-top: 25px;
-                font-family: 'Montserrat-Regular';
+                background-image: url(https://i.pinimg.com/originals/09/3a/2c/093a2ca8c22d2e4670a4573ea862fe25.gif);
+                background-size:70%;
+                color: rgba(104, 104, 104, 0.2);
+                -moz-background-clip: text;
+                -webkit-background-clip: text;
+                font-size: 30px;
+                font-family:'Roboto-Regular';
+                font-weight: bold;
+                line-height: 50px;
+                margin-top: 10px;
+                letter-spacing: 1px;
+                line-height:2;
+                filter: drop-shadow(3px 3px 5px #ffffff);
                }
+               &-subtitlecompleted{
+                text-align: center;
+                color: rgb(63, 191, 3);
+                -moz-background-clip: text;
+                -webkit-background-clip: text;
+                font-size: 15px;
+                margin-top: -10px;
+                font-family:'Roboto-Regular';
+                filter: drop-shadow(1px 1px 1px #00bd91);
+               }
+               &-subtitleedite{
+                text-align: center;
+                color: rgb(158, 0, 0);
+                -moz-background-clip: text;
+                -webkit-background-clip: text;
+                font-size: 15px;
+                margin-top: -10px;
+                font-family:'Roboto-Regular';
+                filter: drop-shadow(1px 1px 1px #d54444);
+               }
+      
              
             }
         }
